# patent-pipeline

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  readme.txt
.github/workflows/: ci.yml  keep-hf-alive.yml
.streamlit/: config.toml
MpairweLauben_22_U_21345_DataPipeline/: readme.txt
MpairweLauben_22_U_21345_DataPipeline/console_report/: patent_report.json
config/: clean_manifest.json  pipeline.yaml
data/clean/: clean_companies.csv  clean_cpc.csv  clean_inventors.csv  clean_patents.csv  clean_relationships.csv
data/sample/: g_assignee_disambiguated.tsv  g_cpc_current.tsv  g_inventor_disambiguated.tsv  g_location_disambiguated.tsv  g_patent.tsv  g_patent_assignee.tsv  g_patent_inventor.tsv
reports/: company_cagr.csv  company_section_matrix.csv  console_report.txt  country_growth_rates.csv  country_trends.csv  cpc_breakdown.csv  decade_comparison.csv  patent_report.json  section_growth.csv  top_companies.csv  top_inventors.csv  yearly_trends.csv
reports/figures/: company_cagr.html  company_section_heatmap.html  country_growth.html  country_share.html  cpc_sections.html  decade_comparison.html  section_growth.html  top_companies.html  yearly_trends.html
scripts/: fetch_clean.py  make_sample.py  render_all_dashboard_charts.py  render_console_report.py  sample_from_real.py
sql/: schema.sql
sql/queries/: q10_country_growth_rates.sql  q11_section_growth.sql  q12_company_section_matrix.sql  q1_top_inventors.sql  q2_top_companies.sql  q3_top_countries.sql  q4_trends_over_time.sql  q5_join_patents_inventors_companies.sql  q6_cte_innovation_leaders.sql  q7_rank_inventors_window.sql  q8_decade_comparison.sql  q9_company_cagr.sql
src/patent_pipeline/: __init__.py  __main__.py  analyze.py  chunked.py  clean.py  cli.py  config.py  load.py  (+5 more)
tests/: conftest.py  test_clean.py  test_load_and_analyze.py
